--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,6 @@ spring:
 server:
   port: 8088
 
-logging:
-  level:
-    dev.waiyanhtet.logging.controller: warn
+#logging:
+#  level:
+#    dev.waiyanhtet.logging.controller: warn
